--- a/feature-extraction.ipynb
+++ b/feature-extraction.ipynb
@@ -2837,7 +2837,7 @@
    "outputs": [],
    "source": [
     "trf = ColumnTransformer([\n",
-    "    ('trf',OneHotEncoder(sparse=False),['batting_team','bowling_team','city'])\n",
+    "    ('trf',OneHotEncoder(sparse_output=False,drop='first'),['batting_team','bowling_team','city'])\n",
     "]\n",
     ",remainder='passthrough')"
    ]
