--- a/feature-extraction.ipynb
+++ b/feature-extraction.ipynb
@@ -2435,7 +2435,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "4525a16c",
+   "id": "02f3013a",
    "metadata": {},
    "outputs": [
     {
@@ -2845,7 +2845,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "669c0955",
+   "id": "24c9083f",
    "metadata": {},
    "outputs": [
     {
@@ -3358,30 +3358,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "id": "bfd54485",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'xgboost' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[40], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mxgboost\u001b[49m\u001b[38;5;241m.\u001b[39m__version__)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'xgboost' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.7.3\n"
      ]
     }
    ],
    "source": [
+    "import xgboost\n",
     "print(xgboost.__version__)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b17b53b",
+   "id": "26b06a37",
    "metadata": {},
    "outputs": [],
    "source": []
