--- a/feature-extraction.ipynb
+++ b/feature-extraction.ipynb
@@ -2889,12 +2889,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "6c048cf4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickle.dump(pipe,open('pipe.pkl','wb'))"
+    "pickle.dump(pipe,open('pipe.sav','wb'))"
    ]
   },
   {
@@ -2916,7 +2916,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80937820",
+   "id": "56219f57",
    "metadata": {},
    "outputs": [],
    "source": []
