--- a/feature-extraction.ipynb
+++ b/feature-extraction.ipynb
@@ -2894,7 +2894,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickle.dump(pipe,open('pipe.sav','wb'))"
+    "pickle.dump(pipe,open('pipe.pkl','wb'))"
    ]
   },
   {
@@ -2916,7 +2916,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56219f57",
+   "id": "7d4b96c5",
    "metadata": {},
    "outputs": [],
    "source": []
